# cross-platform-template-demos

./: .project.gf  Cargo.toml  README.md
demos/: Cargo.toml
libs/app/: Cargo.toml
libs/app/src/: app.rs
libs/fireflies/: Cargo.toml
libs/fireflies/src/: fireflies.rs
libs/gfx/src/: gfx.rs
libs/platform/src/: platform.rs
libs/platform_types/src/: platform_types.rs
libs/splat/: Cargo.toml
libs/splat/src/: splat.rs
static/: index.html
